# puzzlepod

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Containerfile  Makefile  deny.toml
.claude/: settings.json
.claude/commands/: bench-compare.md  create-issue.md  review-pr.md  run-ci.md  triage-issue.md
.claude/skills/governance-domain/: SKILL.md
.claude/skills/rust-conventions/: SKILL.md
.claude/skills/testing-patterns/: SKILL.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: agent-dispatch.yml  agent-review.yml  auto-tag.yml  ci-image.yml  ci.yml  container-build.yml  dco.yml  docs.yml  issue-triage.yml  performance.yml  release-dev.yml  release-tag.yml  rpm-repo.yml  security-scan.yml  vouch.yml
api/: help.html  settings.html
api/search.index/: root.js
api/search.index/entry/: 46d8faad890d.js
api/search.index/function/: 41544c910b4f.js
api/search.index/path/: 1871bfeb13bf.js
api/search.index/type/: 1bc722b355b6.js
ci/: Containerfile
crates/puzzle-hook/: Cargo.toml
crates/puzzle-hook/src/: main.rs
crates/puzzle-init/: Cargo.toml
crates/puzzle-init/src/: main.rs
crates/puzzle-phase2-demo/src/: main.rs
crates/puzzle-proxy/src/: credential_backends.rs  credential_persistence.rs  credentials.rs  dlp.rs  geo.rs  handler.rs  lib.rs  replay.rs  secure_memory.rs  systemd_creds_backend.rs  tls.rs
crates/puzzle-proxy/src/handler/: connect.rs  credentials.rs  dlp_inspect.rs  forward.rs  intercept.rs  journal.rs  mod.rs  routing.rs  tls.rs  transparent.rs  util.rs
crates/puzzle-proxy/tests/: handler_tests.rs
crates/puzzle-sandbox-demo/src/: main.rs
crates/puzzlectl/: Cargo.toml
crates/puzzlectl/src/: cli.rs  client.rs  compliance.rs  lib.rs  main.rs  output.rs  tui.rs
crates/puzzlectl/src/commands/: agent.rs  attestation.rs  audit.rs  branch.rs  compliance_cmd.rs  credential.rs  mod.rs  policy.rs  profile.rs  run.rs  status.rs
crates/puzzlectl/src/sim/: batch.rs  completer.rs  engine.rs  mod.rs  repl.rs  report.rs  scenario.rs
crates/puzzlectl/src/tui/: app.rs  clipboard.rs  event.rs  mod.rs  theme.rs
crates/puzzlectl/src/tui/ui/: audit_log.rs  branch_detail.rs  branch_draft.rs  branch_logs.rs  branch_policy.rs  branch_settings.rs  branches.rs  create_branch.rs  create_credential.rs  credentials.rs  daemon_settings.rs  daemon_status.rs  dashboard.rs  mod.rs  splash.rs
crates/puzzled/: Cargo.toml
crates/puzzled-types/: Cargo.toml
crates/puzzled-types/src/: attestation.rs  audit.rs  behavioral.rs  branch.rs  change.rs  credential.rs  identity.rs  lib.rs  policy.rs  profile.rs  provenance.rs  trust.rs
crates/puzzled/benches/: branch.rs  diff.rs  policy.rs  wal.rs
crates/puzzled/src/: attestation.rs  audit.rs  audit_store.rs  branch.rs  budget.rs  commit.rs  config.rs  conflict.rs  dbus.rs  diff.rs  error.rs  identity.rs  ima.rs  landlock_rules.rs  lib.rs  main.rs  metrics.rs  policy.rs  profile.rs  provenance.rs  seccomp_handler.rs  seccomp_profile.rs  sync_util.rs  test_helpers.rs  trust.rs  wal.rs
crates/puzzled/src/branch/: activate.rs  cleanup.rs  commit_flow.rs  mod.rs  tests.rs
crates/puzzled/src/dbus/: helpers.rs  mod.rs  tests.rs
crates/puzzled/src/sandbox/: bpf_lsm.rs  capabilities.rs  cgroup.rs  fanotify.rs  landlock.rs  mod.rs  namespace.rs  network.rs  overlay.rs  quota.rs  selinux.rs
crates/puzzled/src/sandbox/seccomp/: filter.rs  mod.rs  notif.rs  procmem.rs  validate.rs
crates/puzzled/tests/: bpf_lsm_hooks.rs  branch_lifecycle.rs  concurrent_branches.rs  crash_recovery.rs  cross_module_integration.rs  dbus_validation.rs  diff_engine.rs  e2e_adversarial.rs  e2e_governance_lifecycle.rs  e2e_scenarios.rs  fanotify_monitoring.rs  ima_integration.rs  live_dbus_integration.rs  phase2_features.rs  podman_native_integration.rs  policy_evaluation.rs  profile_validation.rs  rogue_agent.rs  sandbox_containment.rs  seccomp_notif_handler.rs  seccomp_validation.rs  security_hardening.rs  wal_recovery.rs  wal_recovery_execution.rs  wal_safety.rs
crates/puzzled/tests/common/: mod.rs
demo/: run_demo_tui.sh
docs/: AI_POLICY.md  demo-guide.md  gcp-setup.md  profile-authoring-guide.md  security-guide.md  technical-design.md
docs/compliance/: eu-ai-act.md  nist-ai-rmf.md
fuzz/fuzz_targets/: fuzz_diff_changeset.rs  fuzz_policy_input.rs  fuzz_profile_yaml.rs
man/: puzzlectl.1
packaging/: build-srpm.sh  puzzlectl.spec  puzzlepod-el.repo  puzzlepod.repo
podman/: puzzle-podman
podman/quadlet/: puzzlepod-agent.container
policies/profiles/: restricted.yaml  standard.yaml  test-inherit.yaml
policies/rules/: commit.rego
policies/schemas/: profile.schema.json
scripts/: check-dco.sh  check-license-headers.sh  libvirt-dev.sh
selinux/: puzzlepod.te
skills/: adversarial-qe.md  docs-writer.md  engineer.md  performance.md  process.md  product-engineering.md  product-manager.md  product-security.md  test-qe.md  uxd-review.md  xe-support-review.md
