[package]
name = "puzzle-hook"
version = "0.1.0"
edition = "2021"
description = "OCI runtime hook for PuzzlePod governance integration"
license = "Apache-2.0"

[[bin]]
name = "puzzle-hook"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt", "macros", "time"] }
zbus = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
