[package]
name = "puzzle-init"
version = "0.1.0"
edition = "2021"
description = "PuzzlePod Landlock shim entrypoint for container init"
license = "Apache-2.0"
rust-version = "1.75"

# Build as a static musl binary for container portability:
#   cargo build --release --target x86_64-unknown-linux-musl

[[bin]]
name = "puzzle-init"
path = "src/main.rs"

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"

